--- a/src/Features/Core/Portable/FeaturesResources.resx
+++ b/src/Features/Core/Portable/FeaturesResources.resx
@@ -1352,4 +1352,7 @@ This version used in: {2}</value>
   <data name="Make_field_readonly" xml:space="preserve">
     <value>Make field readonly</value>
   </data>
+  <data name="Convert_to_conditional_expression" xml:space="preserve">
+    <value>Convert to conditional expression</value>
+  </data>
 </root>
