--- a/src/Features/CSharp/Portable/CSharpFeaturesResources.resx
+++ b/src/Features/CSharp/Portable/CSharpFeaturesResources.resx
@@ -162,6 +162,9 @@
   <data name="Remove_Unnecessary_Cast" xml:space="preserve">
     <value>Remove Unnecessary Cast</value>
   </data>
+  <data name="Declare_as_nullable" xml:space="preserve">
+    <value>Declare as nullable</value>
+  </data>
   <data name="Cast_is_redundant" xml:space="preserve">
     <value>Cast is redundant</value>
   </data>
