--- a/src/Features/VisualBasic/Portable/xlf/VBFeaturesResources.ja.xlf
+++ b/src/Features/VisualBasic/Portable/xlf/VBFeaturesResources.ja.xlf
@@ -4,7 +4,7 @@
     <body>
       <trans-unit id="If_statement_can_be_simplified">
         <source>'If' statement can be simplified</source>
-        <target state="new">'If' statement can be simplified</target>
+        <target state="translated">'if' ステートメントは簡素化できます</target>
         <note />
       </trans-unit>
       <trans-unit id="Insert_0">
@@ -54,7 +54,7 @@
       </trans-unit>
       <trans-unit id="Multiple_Types">
         <source>&lt;Multiple Types&gt;</source>
-        <target state="new">&lt;Multiple Types&gt;</target>
+        <target state="translated">&lt;複数の種類&gt;</target>
         <note />
       </trans-unit>
       <trans-unit id="Remove_Unnecessary_Imports">
@@ -1823,7 +1823,7 @@ Sub(&lt;parameterList&gt;) &lt;statement&gt;</target>
       </trans-unit>
       <trans-unit id="Invert_If">
         <source>Invert If</source>
-        <target state="new">Invert If</target>
+        <target state="translated">if を反転する</target>
         <note />
       </trans-unit>
     </body>
