--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -1943,6 +1943,12 @@ If such a class is used as a base class and if the deriving class defines a dest
   <data name="WRN_TypeParameterSameAsOuterTypeParameter_Title" xml:space="preserve">
     <value>Type parameter has the same name as the type parameter from outer type</value>
   </data>
+  <data name="WRN_TypeParameterSameAsOuterMethodTypeParameter" xml:space="preserve">
+    <value>Type parameter '{0}' has the same name as the type parameter from outer method '{1}'</value>
+  </data>
+  <data name="WRN_TypeParameterSameAsOuterMethodTypeParameter_Title" xml:space="preserve">
+    <value>Type parameter has the same type as the type parameter from outer method.</value>
+  </data>
   <data name="ERR_TypeVariableSameAsParent" xml:space="preserve">
     <value>Type parameter '{0}' has the same name as the containing type, or method</value>
   </data>
